fix: apply word wrap

--- a/web/css/global.css
+++ b/web/css/global.css
@@ -11,6 +11,7 @@ body {
     system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
     "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif !important;
     word-break: keep-all;
+    word-wrap: break-word;
 }
 
 button, input, textarea {
